Add return URL handling and improve user login/logout experience

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,9 +15,12 @@
           <span class="input-group-text">🔍</span>
         </div>
         <div class="navbar-nav ms-auto">
-            <a href="/login" class="nav-link">Login</a>
-            <a href="/signup" class="nav-link">Sign Up</a>
-            <a href="/logout" class="nav-link">Logout</a>
+            <% if (!currentUser) { %>
+              <a href="/login" class="nav-link">Login</a>
+              <a href="/register" class="nav-link">Register</a>
+            <% } else { %>
+              <a href="/logout" class="nav-link">Logout</a>
+            <% } %>
         </div>
       </div>
     </div>
