--- a/views/businesses/show.ejs
+++ b/views/businesses/show.ejs
@@ -11,13 +11,16 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item text-muted"><%= `${business.city}, ${business.state}` %></li>
               <li class="list-group-item">$<%= business.price %>/night</li>
+              <li class="list-group-item">Submitted by <%= `${business.author.username.charAt(0).toUpperCase() + business.author.username.slice(1)}` %></li>
             </ul>
-            <div class="card-body">
-                <a href="/businesses/<%= business._id %>/edit" class="card-link btn btn-info">Edit Business</a>
-                <form action="/businesses/<%= business._id %>?_method=DELETE" method="post" class="d-inline">
-                    <button class="card-link btn btn-danger">Delete</button>
-                </form>
-            </div>
+            <% if (currentUser && business.author.equals(currentUser._id)) { %>
+                <div class="card-body">
+                    <a href="/businesses/<%= business._id %>/edit" class="card-link btn btn-info">Edit Business</a>
+                    <form action="/businesses/<%= business._id %>?_method=DELETE" method="post" class="d-inline">
+                        <button class="card-link btn btn-danger">Delete</button>
+                    </form>
+                </div>
+            <% } %>
         </div>
         <div class="card mb-3">
             <div class="card-body">
