--- a/views/businesses/show.ejs
+++ b/views/businesses/show.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+<link rel="stylesheet" href="/stylesheets/stars.css">
 
 <div class="row">
     <div class="col-6 offset-3">
@@ -28,8 +29,22 @@
                     <h2>Leave a review</h2>
                     <form action="/businesses/<%= business._id %>/reviews" class="mb-3 validated-form" method="post" novalidate>
                         <div class="mb-3">
-                        <label class="form-label" for="rating">Rating</label>
-                        <input class="form-range" type="range" name="review[rating]" id="rating" min="1" max="5" value="1">
+                        <!-- <label class="form-label" for="rating">Rating</label> -->
+                        <!-- <input class="form-range" type="range" name="review[rating]" id="rating" min="1" max="5" value="1"> -->
+                        <fieldset class="starability-basic">
+                            <legend>Rating:</legend>
+                            <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+                            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                            <label for="first-rate1" title="Terrible">1 star</label>
+                            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                            <label for="first-rate2" title="Not good">2 stars</label>
+                            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                            <label for="first-rate3" title="Average">3 stars</label>
+                            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                            <label for="first-rate4" title="Very good">4 stars</label>
+                            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                            <label for="first-rate5" title="Amazing">5 stars</label>
+                          </fieldset>
                         </div>
                         <div class="mb-3">
                         <label class="form-label" for="body">Review</label>
@@ -56,7 +71,9 @@
                                 <h6>By <%= `${review.author.username.charAt(0).toUpperCase() + review.author.username.slice(1)}` %></h6>
                             </div>
                             <div class="d-flex w-100 justify-content-between">
-                                <h6 class="mb-1">Rating: <%= review.rating %> stars</h6>
+                                <p class="starability-result mb-1" data-rating="<%= review.rating %>">
+                                  Rated: <%= review.rating %> stars
+                                </p>
                             </div>
                             <p class="mb-1"><%= review.body %></p>
                             <% if (currentUser && review.author.equals(currentUser._id)) { %>
