--- a/views/businesses/show.ejs
+++ b/views/businesses/show.ejs
@@ -4,7 +4,10 @@
 <div class="row">
     <div class="col-6 offset-3">
         <div class="card mb-3 mt-3">
-            <img src="<%= business.image %>" class="card-img-top" alt="">
+            <% for(let img of business.images) { %>
+                <img src="<%= img.url %>" class="card-img-top" alt="">
+            <% } %>
+            <!-- <img src="<%= business.image %>" class="card-img-top" alt=""> -->
             <div class="card-body">
               <h5 class="card-title"><%= `${business.title.charAt(0).toUpperCase() + business.title.slice(1)}` %></h5>
               <p class="card-text"><%= business.description %></p>
