Refactor business model to support multiple images; update routes and views accordingly

--- a/views/businesses/new.ejs
+++ b/views/businesses/new.ejs
@@ -27,7 +27,7 @@
             <div class="mb-3 w-50">
                 <label class="form-label" for="image">Image url</label>
                 <!-- <input class="form-control" type="url" id="image" name="business[image]" required> -->
-                <input type="file" name="image" id="image" required multiple>
+                <input type="file" name="image" id="image" multiple>
                 <div class="invalid-feedback">
                     Please provide a valid image url.
                 </div>
