Add support for multiple images in business updates; modify forms and views accordingly

--- a/views/businesses/edit.ejs
+++ b/views/businesses/edit.ejs
@@ -2,7 +2,7 @@
 <div class="row">
     <h1 class="text-center">Edit Business</h1>
     <div class="col6 offset-3">
-        <form action="/businesses/<%= business._id %>?_method=PUT" method="post" novalidate class="validated-form">
+        <form action="/businesses/<%= business._id %>?_method=PUT" method="post" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3 w-50">
                 <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" id="title" name="business[title]" value="<%= business.title %>" required>
@@ -19,8 +19,9 @@
                 <div class="invalid-feedback">Please provide a valid state.</div>
             </div>
             <div class="mb-3 w-50">
-                <label class="form-label" for="image">Image url</label>
-                <input class="form-control" type="url" id="image" name="business[image]" value="<%= business.image %>>" required>
+                <label class="form-label" for="image">Add Images</label>
+                <!-- <input class="form-control" type="url" id="image" name="business[image]" value="<%= business.image %>>" required> -->
+                 <input type="file" name="image" id="image" class="form-control" multiple>
                 <div class="invalid-feedback">Please provide a valid image url.</div>
             </div>
             <div class="mb-3">
