--- a/views/businesses/new.ejs
+++ b/views/businesses/new.ejs
@@ -25,9 +25,10 @@
                 </div>
             </div>
             <div class="mb-3 w-50">
-                <label class="form-label" for="image">Image url</label>
-                <!-- <input class="form-control" type="url" id="image" name="business[image]" required> -->
-                <input type="file" name="image" id="image" multiple>
+                <label class="mb-2 form-label" for="image">Choose Images</label>
+                <div class="input-group mb-3">
+                    <input type="file" name="image" class="form-control" id="customFile" multiple>
+                </div>
                 <div class="invalid-feedback">
                     Please provide a valid image url.
                 </div>
