--- a/views/businesses/show.ejs
+++ b/views/businesses/show.ejs
@@ -4,9 +4,28 @@
 <div class="row">
     <div class="col-6 offset-3">
         <div class="card mb-3 mt-3">
-            <% for(let img of business.images) { %>
+            <!-- <% for(let img of business.images) { %>
                 <img src="<%= img.url %>" class="card-img-top" alt="">
-            <% } %>
+            <% } %> -->
+            <div id="carouselCityScout" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <% business.images.forEach((img, i) => { %>
+                        <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+                            <img src="<%= img.url %>" class="d-block w-100" alt="">
+                          </div>
+                    <% }) %>
+                </div>
+                <% if (business.images.length > 1) { %>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselCityScout" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselCityScout" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                <% } %>
+            </div>
 
             <div class="card-body">
               <h5 class="card-title"><%= `${business.title.charAt(0).toUpperCase() + business.title.slice(1)}` %></h5>
