--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -15,5 +15,7 @@
     <%- include('../partials/footer') %>
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/javascripts/validateForm.js"></script>
+    <script src="/javascripts/addFileName.js"></script>
+    <script src="/public/javascripts/bs-custom-file-input.js"></script>
 </body>
 </html>
