--- a/views/businesses/new.ejs
+++ b/views/businesses/new.ejs
@@ -31,7 +31,7 @@
                     <input type="file" name="image" class="form-control custom-file-input" id="image" multiple onchange="previewMultiple(event)">
                     <label for="image" class="form-label custom-file-label"></label>
                 </div>
-                <div id="formFile"></div>
+                <div id="formFile" class=""></div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Business price</label>
