--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,6 +16,6 @@
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/javascripts/validateForm.js"></script>
     <script src="/javascripts/addFileName.js"></script>
-    <script src="/public/javascripts/bs-custom-file-input.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
 </body>
 </html>
