--- a/views/businesses/new.ejs
+++ b/views/businesses/new.ejs
@@ -1,5 +1,6 @@
 <% layout('layouts/boilerplate') %>
-<link rel="stylesheet" href="/stylesheets/stars.css" class="rel">
+<link rel="stylesheet" href="/stylesheets/images.css" class="rel">
+
 <div class="row">
     <h1 class="text-center">New Business</h1>
     <div class="col6 offset-3">
@@ -27,11 +28,10 @@
             </div>
             <div class="mb-3 w-50">
                 <label class="mb-2 form-label" for="image">Choose Images</label>
-                <div class="input-group mb-3 form-file custom-file">
-                    <input type="file" name="image" class="form-control custom-file-input" id="image" multiple onchange="previewMultiple(event)">
-                    <label for="image" class="form-label custom-file-label"></label>
+                <div class="input-group mb-3">
+                    <input type="file" name="image" class="form-control" id="image" onchange="previewMultiple(event)" multiple>
                 </div>
-                <div id="formFile" class=""></div>
+                <div id="formFile" class="mb-3"></div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Business price</label>
