--- a/views/businesses/edit.ejs
+++ b/views/businesses/edit.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+<link rel="stylesheet" href="/stylesheets/images.css" class="rel">
 <div class="row">
     <h1 class="text-center">Edit Business</h1>
     <div class="col6 offset-3">
@@ -19,10 +20,11 @@
                 <div class="invalid-feedback">Please provide a valid state.</div>
             </div>
             <div class="mb-3 w-50">
-                <label class="form-label" for="image">Add Images</label>
-                <!-- <input class="form-control" type="url" id="image" name="business[image]" value="<%= business.image %>>" required> -->
-                 <input type="file" name="image" id="image" class="form-control" multiple>
-                <div class="invalid-feedback">Please provide a valid image url.</div>
+                <label class="mb-2 form-label" for="image">Add Images</label>
+                <div class="input-group mb-3">
+                    <input type="file" name="image" class="form-control" id="image" onchange="previewMultiple(event)" multiple>
+                </div>
+                <div id="formFile" class="mb-3"></div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Business price</label>
