--- a/views/businesses/show.ejs
+++ b/views/businesses/show.ejs
@@ -11,7 +11,7 @@
                 <div class="carousel-inner">
                     <% business.images.forEach((img, i) => { %>
                         <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
-                            <img src="<%= img.url %>" class="d-block w-100" alt="">
+                            <img src="<%= img.cardImage %>" class="d-block w-100" alt="">
                           </div>
                     <% }) %>
                 </div>
