--- a/views/businesses/index.ejs
+++ b/views/businesses/index.ejs
@@ -8,7 +8,11 @@
         <div class="card mb-3" >
             <div class="row">
                 <div class="col-md-4">
-                    <img src="<%= business.images[0].indexImage%>" alt="" class="img-fluid">
+                    <% if (business.images.length) { %>
+                        <img src="<%= business.images[0].indexImage%>" alt="" class="img-fluid">
+                    <% } else { %>
+                        <img src="https://res.cloudinary.com/dq2to8sns/image/upload/w_350,h_250,c_fill/v1742262109/CityScout/etpjctywhycjwhqeljcc.jpg" alt="" class="img-fluid">
+                    <% } %>
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
