--- a/views/businesses/index.ejs
+++ b/views/businesses/index.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+<div id="map" class="mb-3" style="height: 500px; width: 100%;"></div>
 <h1>All Businesses</h1>
 <div class="mb-5">
     <a href="/businesses/new">Add New Business</a>
@@ -8,11 +9,7 @@
         <div class="card mb-3" >
             <div class="row">
                 <div class="col-md-4">
-                    <% if (business.images.length) { %>
-                        <img src="<%= business.images[0].indexImage%>" alt="" class="img-fluid">
-                    <% } else { %>
-                        <img src="https://res.cloudinary.com/dq2to8sns/image/upload/w_350,h_250,c_fill/v1742262109/CityScout/etpjctywhycjwhqeljcc.jpg" alt="" class="img-fluid">
-                    <% } %>
+                    <img src="<%= business.images[0].indexImage %>" alt="" class="img-fluid">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -26,3 +23,10 @@
         </div>
     <% }); %>
 </ul>
+
+<script>
+    const maptilerApiKey = '<%- process.env.MAPTILER_API_KEY %>';
+    const businesses = { features: <%- JSON.stringify(businesses) %>}
+</script>
+
+<script src="/javascripts/clusterMap.js"></script>
