--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,21 +1,32 @@
 <% layout('layouts/boilerplate') %>
-<div class="col6 offset-3">
-    <h1>LOGIN</h1>
-    <form action="/login" method="post" class="validated-form" novalidate>
-        <div class="mb-3 w-50">
-            <label class="form-label" for="username">Username</label>
-            <input class="form-control" type="text" id="username" name="username" required>
-            <div class="valid-feedback">
-                Looks good!
+<div class="container d-flex justify-content-center align-items-center mt-3 min-vh-100">
+    <div class="row w-100">
+        <div class="col-md-6 offset-md-3 mx-auto">
+            <div class="card shadow">
+                <img src="https://images.unsplash.com/photo-1742268351444-7e153a9fb747?q=80&w=3174&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Login Image" class="card-img-top" />
+                <div class="card-body">
+                    <h5 class="card-title">Login</h5>
+                </div>
+                <form action="/login" method="post" class="validated-form" novalidate>
+                    <div class="mb-3 card-body">
+                        <label class="form-label" for="username">Username</label>
+                        <input class="form-control" type="text" id="username" name="username" required autofocus>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="mb-3 card-body">
+                        <label class="form-label" for="password">Password</label>
+                        <input class="form-control" type="password" id="password" name="password" required autofocus>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <button class="btn btn-success w-100">Login</button>
+                    </div>
+                </form>
             </div>
         </div>
-        <div class="mb-3 w-50">
-            <label class="form-label" for="password">Password</label>
-            <input class="form-control" type="password" id="password" name="password" required>
-            <div class="valid-feedback">
-                Looks good!
-            </div>
-        </div>
-        <button class="btn btn-success">Login</button>
-    </form>
+    </div>
 </div>
