--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,5 +1,44 @@
 <% layout('layouts/boilerplate') %>
-<div class="col6 offset-3">
+<div class="container d-flex justify-content-center align-items-center mt-3 min-vh-100">
+    <div class="row w-100">
+        <div class="col-md-6 offset-md-3 mx-auto">
+            <div class="card shadow">
+                <img src="https://plus.unsplash.com/premium_photo-1742945845688-7c11c2f6d33d?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw1NHx8fGVufDB8fHx8fA%3D%3D" alt="Login Image" class="card-img-top" />
+                <div class="card-body">
+                    <h5 class="card-title">Register</h5>
+                </div>
+                <form action="/register" method="post" class="validated-form" novalidate>
+                    <div class="mb-3 card-body">
+                        <label class="form-label" for="username">Username</label>
+                        <input class="form-control" type="text" id="username" name="username" required autofocus>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="mb-3 card-body">
+                        <label class="form-label" for="email">Email</label>
+                        <input class="form-control" type="email" id="email" name="email" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="mb-3 card-body">
+                        <label class="form-label" for="password">Password</label>
+                        <input class="form-control" type="password" id="password" name="password" required autofocus>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <button class="btn btn-success w-100">Register</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- <div class="col6 offset-3">
     <h1>REGISTER</h1>
     <form action="/register" method="post" class="validated-form" novalidate>
         <div class="mb-3 w-50">
@@ -25,4 +64,4 @@
         </div>
         <button class="btn btn-success">Register</button>
     </form>
-</div>
+</div> -->
