Refactor map container IDs for consistency; update styles for cluster map and adjust form column classes for responsive design

--- a/views/businesses/edit.ejs
+++ b/views/businesses/edit.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/stylesheets/images.css" class="rel">
 <div class="row">
     <h1 class="text-center">Edit Business</h1>
-    <div class="col6 offset-3">
+    <div class="col-md-6 offset-md-3">
         <form action="/businesses/<%= business._id %>?_method=PUT" method="post" novalidate class="validated-form" enctype="multipart/form-data">
             <!-- Title -->
             <div class="mb-3 w-50"> 
