--- a/views/businesses/show.ejs
+++ b/views/businesses/show.ejs
@@ -42,7 +42,7 @@
                 </div>
             <% } %>
         </div>
-        <div id="map" class="mb-3" style="height: 300px; width: 100%;"></div>
+        <div id="map" class="mb-3"></div>
         <% if (currentUser) { %>
             <div class="card mb-3">
                 <div class="card-body">
