--- a/views/businesses/index.ejs
+++ b/views/businesses/index.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/boilerplate') %>
-<div id="map" class="mb-3" style="height: 500px; width: 100%;"></div>
+<div id="cluster-map" class="mb-3"></div>
 <h1>All Businesses</h1>
 <div class="mb-5">
     <a href="/businesses/new">Add New Business</a>
