--- a/views/businesses/new.ejs
+++ b/views/businesses/new.ejs
@@ -3,7 +3,7 @@
 
 <div class="row">
     <h1 class="text-center">New Business</h1>
-    <div class="col6 offset-3">
+    <div class="col-md-6 offset-md-3">
         <form action="/businesses" method="post" class="validated-form" novalidate enctype="multipart/form-data">
             <div class="mb-3 w-50">
                 <label class="form-label" for="title">Title</label>
